--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,4 +49,5 @@ jobs:
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v6.0.0
         with:
+          name: ${{ matrix.platform }}
           path: ./src-tauri/target/release/bundle/
